# CPP_Fred

./: .gitignore
MO3D/mO3D/: mO3D.sln
MO3D/mO3D/enc_temp_folder/c5e4793e4636769ca9e98e8869b186/: mat4.cpp
MO3D/mO3D/enc_temp_folder/cd78c9bab76aeef6a79c06d98843a4e/: mat4.cpp
MO3D/mO3D/mO3D/: TestUnit.cpp  UnitTest.h  mO3D.cpp  mO3D.vcxproj  mO3D.vcxproj.filters  mat4.cpp  mat4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
MO3D/mO3D/mO3D/x64/Release/: mO3D.pch
MO3D/mO3D/mO3D/x64/Release/mO3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mO3D.lastbuildstate  mO3D.write.1u.tlog
MO3D/mO3D/x64/Release/: mO3D.iobj  mO3D.ipdb
OpenGL_SampleEdit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Projects.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch-main-Debug.cmd  launch-main-MinSizeRel.cmd  launch-main-Release.cmd  main.vcxproj  main.vcxproj.filters
OpenGl_Sample/: CMakeLists.txt
OpenGl_Sample/common/: controls.cpp  controls.hpp  texture.cpp
OpenGl_Sample/main/: TextureFragmentShader.fragmentshader  aa.dds  aaa.dds  main.cpp
OpenGl_Sample/main/gameReseau/color/: gr_color.cpp  gr_color.hpp
OpenGl_Sample/main/gameReseau/gameBoard/: gr_gameBoard.hpp
OpenGl_Sample/main/gameReseau/gameObject/: gr_gameObject.cpp  gr_gameObject.hpp
OpenGl_Sample/main/gameReseau/gameObject/ball/: gr_ball.cpp  gr_ball.hpp
OpenGl_Sample/main/gameReseau/gameObject/bounds/: gr_bounds.cpp  gr_bounds.hpp
OpenGl_Sample/main/gameReseau/gameObject/gameBoard/: gr_gameBoard.cpp  gr_gameBoard.hpp
OpenGl_Sample/main/gameReseau/gameObject/gameBoard/bottomBorder/: gr_bottomBorderGameBoard.cpp  gr_bottomBorderGameBoard.hpp
OpenGl_Sample/main/gameReseau/gameObject/gameBoard/leftBorder/: gr_leftBorderGameBoard.cpp  gr_leftBorderGameBoard.hpp
OpenGl_Sample/main/gameReseau/gameObject/gameBoard/plane/: gr_planeGameBoard.cpp  gr_planeGameBoard.hpp
OpenGl_Sample/main/gameReseau/gameObject/gameBoard/rightBorder/: gr_rightBorderGameBoard.cpp  gr_rightBorderGameBoard.hpp
OpenGl_Sample/main/gameReseau/gameObject/gameBoard/topBorder/: gr_topBorderGameBoard.cpp  gr_topBorderGameBoard.hpp
OpenGl_Sample/main/gameReseau/gameObject/objGameObject/: gr_objGameObject.cpp  gr_objGameObject.hpp
OpenGl_Sample/main/gameReseau/managers/ball/: gr_ballManager.cpp  gr_ballManager.hpp
OpenGl_Sample/main/gameReseau/managers/input/: gr_inputManager.cpp  gr_inputManager.hpp
OpenGl_Sample/main/gameReseau/player/: gr_player.cpp  gr_player.hpp
OpenGl_Sample/main/gameReseau/renderer/: gr_renderer.cpp  gr_renderer.hpp
OpenGl_Sample/main/gameReseau/time/: gr_time.cpp  gr_time.hpp
OpenGl_Sample/main/gameReseau/transform/: gr_transform.cpp  gr_transform.hpp
OpenGl_Sample/main/gameReseau/util/: gr_util.cpp  gr_util.hpp
OpenGl_Sample/main/gameReseau/window/: gr_window.cpp  gr_window.hpp
OpenGl_SampleEdit/: plane.h
OpenGl_Sample_G037/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Projects.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch-main-MinSizeRel.cmd  launch-main-Release.cmd  main.vcxproj  main.vcxproj.filters
OpenGl_Sample_desktop/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Projects.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch-main-Debug.cmd  launch-main-RelWithDebInfo.cmd  launch-main-Release.cmd  main.vcxproj  main.vcxproj.filters
OpenGl_Sample_new_edit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Projects.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch-main-MinSizeRel.cmd  launch-main-RelWithDebInfo.cmd  launch-main-Release.cmd  main.vcxproj  main.vcxproj.filters
OpenGl_Sample_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Projects.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch-main-RelWithDebInfo.cmd  main.vcxproj  main.vcxproj.filters
OpenGl_Sample_test_2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Projects.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch-main-Debug.cmd  launch-main-MinSizeRel.cmd  launch-main-Release.cmd  main.vcxproj  main.vcxproj.filters
Shader/: DX S1023 Install fix.txt  exo.txt
Shader/3DEngine/: 3DEngine.sln
Shader/3DEngine/Engine/: Camera.cpp  Camera.h  CellShadingShader.cpp  CellShadingShader.h  ColorShader.cpp  ColorShader.h  D3DLayer.cpp  D3DLayer.h  Engine.vcxproj  Engine.vcxproj.filters  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Model.cpp  Model.h  ModelObj.cpp  ModelObj.h  OutlineShader.cpp  OutlineShader.h  System.cpp  System.h  Texture.cpp  Texture.h  TextureShader.h  TextureShadercpp  main.cpp  shader-error.txt  stdafx.h
Shader/3DEngine/data/: cellshading1.vs  cellshading2.ps  cellshading2.vs  color.ps  color.vs  outline.ps  outline.vs  texture.vs
Shader/3DEngine/data/normal1/: cellshading2.ps  cellshading2.vs
Shader/3DEngine/data/normalwithtex/: cellshading2.ps  cellshading2.vs
